# stock-trend-strategy

./: .gitignore  Procfile  README.md  features+stories.md  npm-scripts.backup  package-lock.json  package.json  refresh-token.md  stock-trend-strategy.code-workspace
.github/workflows/: deploy.yml
alpaca/: add-elder-color.ts  backtest.ts  client.ts  fetch-daily-series.ts  query-signals.ts  symbols.json  transformation.ts  utils.ts  write-signals.ts
alphavantage/: add-elder-color.ts  backtest.ts  client.ts  fetch-all-daily-series.ts  fetch-daily-series.ts  query-signals.ts  transformation.ts  utils.ts  write-signals.ts
app/: Caddyfile  auth.route.ts  deno.json  docker-compose.yml  globals.css  layout.tsx  main.ts  page.module.css  page.tsx  server.ts  signals.route.ts  symbols.route.ts
app/alpaca/: add-elder-color.ts  backtest.ts  client.ts  fetch-daily-series.ts  query-signals.ts  symbols.json  transformation.ts  write-signals.ts  write-trading-days.ts
app/api/signals/: route.ts
app/auth/: db-adapter.ts  email-provider.ts
app/cron/: update-series-and-signals.ts
app/model/: db.ts  types.ts
app/model/migrations/: 00002-backtest.up.sql  00003-daily-change.down.sql  00003-daily-change.up.sql  00003-volume.down.sql  00003-volume.up.sql
app/routes/: auth.route.ts  server.ts  signals.route.ts  symbols.route.ts  trading-days.route.ts
app/server/: README.md  heat-map.txt  main.py  nasdaq-heat-map-symbols.json  pyproject.toml  series  sp-heat-map-symbols.json  supervisord.conf  test_main.py
app/server/mod/: authentication.py  database.py
app/worker/: db.ts  deno.json
app/worker/alpaca/: add-elder-color.ts  backtest.ts  client.ts  fetch-daily-series.ts  query-signals.ts  symbols.json  transformation.ts  utils.ts  write-signals.ts  write-trading-days.ts
calculation/: signals.ts
components/: SeriesChart.tsx  SeriesForm.tsx  Signals.tsx  SignalsList.tsx
context/: SeriesContext.tsx
frontend/: .eslintrc.cjs  index.html  package-lock.json  package.json
frontend/src/: App.module.css  App.tsx  global.css  main.tsx  vite-env.d.ts
lib/hooks/: useGoogleCharts.ts
model/: db.ts  types.ts
model/migrations/: 00001-signals.down.sql  00001-signals.up.sql  00002-backtest.down.sql
(+32 files in other folders)
