[tool.poetry]
name = "stock-trends-server"
version = "0.1.0"
description = "Web Server for Strock Trends Strategy Project"
authors = ["Christian Kozalla <christian.kozalla@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.103.1"
uvicorn = {extras = ["standard"], version = "^0.23.2"}
databases = "^0.8.0"
asyncpg = "^0.28.0"
psycopg2-binary = "^2.9.7"
aiosqlite = "^0.19.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# Deployment command to start uvicorn for production
# in /app/server directory
# poetry install --only main
# poetry build
# poetry shell && uvicorn main:app --host 127.0.0.1 --port 4005