[tool.poetry]
name = "stock-trends-server"
version = "0.1.0"
description = "Web Server for Strock Trends Strategy Project"
authors = ["Christian Kozalla <christian.kozalla@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "3.12.5"
fastapi = "^0.103.1"
uvicorn = {extras = ["standard"], version = "^0.23.2"}
databases = "^0.8.0"
asyncpg = "^0.28.0"
aiosqlite = "^0.19.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.6"
httpx = "^0.26.0"
pytest = "^7.4.3"
python-dotenv = "^1.0.1"
supervisor = "^4.2.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
